
Change Log

08/03/2008
- Allineamento esempi
- Implementazione resize sugli HUD 2D

06/03/2008
- Eventi di resize della finestra
- Bug fix chiamata a DoRendering

28/02/2008
- Riscritta la parte di parsing dei nodi
- Riscritto la metodologia di picking
- Riconfigurazione del Tooltips 
- FunCore allineato
- Aggiunta del CoreJSExample

06/02/2008
- Riscritta la parte di gestione dei parametri di init della shell e dei parametri da object
- Finita implementazione dei log forzati su file da parametri Object
- Caricamento Core Advanced anche dentro Local Firefox e Main FIrefox

04/02/2008
- Minor bug fix
- Aggiunta define per settaare directory core o User space o FIrefox Plugin

29/01/2008
- Finita la release per nposg e core

28/01/2008
- Ripristinato il nome dll a nome di progetto (per release e test usare lo stesso nome dello sha1)
- Varie modifiche e improv

11/12/2007
- Rilasciata R2
- Modificati i progetti

04/12/2007
- SceneModifier finito creazione nodi gruppo, switch, mt
- Aggiunti comportamenti per switch
- Finita Delete Node
- Iniziati i comportamenti per le MT

03/12/2007
- Finito CoreExampleAnimateView con esempio
- Porting FlyManipulator -> osgvisweb a osg4web. Riadattato senza Pick. 
- Ripristinata navigazione a 3 pulsanti
- TODO: manca esempio definitivo con pulsanti tramite JavaScript
- KNOW BUG: la camera se ne fotte di setViewMatrix... ogni volta risetta la stessa

30/11/2007
- Finita integrazione CoreExampleEditManipulator
- KNOW BUGS: bug con l'HUD di testo e finire il loading dei modelli
- TODO ISSUES: mettere a posto le dimensioni dell'HUD, renderlo switchabile e altre mini modifiche

26/11/2007
- Cache modelli caricati in loadAsync
- Risposta a JS di errore in caricamento
- Aggiunta funzione di raise in JS
- Inizializzato progetto SceneModifier
- Aggiunta Metodo initSceneData
- Modificati Progetti

23/11/2007
- Loading e attacco in gruppi (testare)
- Modifiche al test
- Corretto BUG isLoading
- Opzioni di ottimizzazione dei modelli


22/11/2007